--- a/index.html
+++ b/index.html
@@ -4,15 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header>
+      <img class="logo" src="./images/spotify-logo.png" alt="Spotfy logo" />
+
+      <nav class="nav-menu">
+          <li>Premium</l>
+          <li>Discover</li>
+          <li>Help</li>
+          <li>Download</li>
+      </nav>
+    </header>
+
+    <main>
+      <section id="hero-image" class="hero-image">
+        <h1>Music for everyone</h1>
+        <p>Spotify is now free on
+          mobile, tablet and computer.
+           Listen to the right music, wherever you are.</p>
+      </section>
+      <section class="whats">
+        <h3> What’s on Spotify</h3> 
+        <hr/>
+      </section>
+      <div class="icons">
+        <div class="music-icon">
+          <img src="./images/music-icon.png" alt="music-icon">
+          <h1>Millions of Songs</h1>
+          <h3>There are millions of songs on Spotify</h3>
+        </div>
+        <div class="hd-icon">
+          <img src="./images/high-quality-icon.png" alt="hd-icon">
+          <h1>HD Music</h1>
+          <h3>Listen to music as if you were listening live</h3>
+        </div>
+        <div class="devices-icon">
+          <img src="./images/devices-icon.png" alt="devices-icon">
+          <h1>Stream Everywhere</h1>
+          <h3>Stream music on your smartphone, tablet or computer</h3>
+        </div>
+      </div>
+
+    
+
+    
+    <section>
+    <!--
+    Premium Discover Help Download Music for everyone. Spotify is now free on
+    mobile, tablet and computer. Listen to the right music, wherever you are.
+    What’s on Spotify? Millions of Songs There are millions of songs on Spotify
+    HD Music Listen to music as if you were listening live Stream Everywhere
+    Stream music on your smartphone, tablet or computer It’s as yeezy as Kanye
+    West. Search Know what you want to listen to? Just search and hit play.
+    Browse Check out the latest charts, brand new releases and great playlists
+    for right now. Discover Enjoy new music every Monday with your own personal
+    playlist. Or sit back and enjoy Radio.-->
+  </section>
   </body>
 </html>
